--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,7 @@
-COMP_APP=project/__init__.py
-COMP_ENV=development
-DATABASE_URL=postgresql://compounds_db:compounds_db@db:5432/compounds_dev
+FLASK_APP=project/__init__.py
+FLASK_ENV=development
+DATABASE_URL=postgresql://hello_flask:hello_flask@db:5432/hello_flask_dev
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+APP_FOLDER=/home/app/web
